--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
-<html>
-	<head>
-	</head>
-	<body>
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+</head>
+<body>
+	
+</body>
 </html>
